// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a FormattedDate using Snapshots 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={undefined}
>
  01/01/2015 00:00
</Text>
`;

exports[`renders a FormattedDate with custom format using Snapshots 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={undefined}
>
  2015-01-01
</Text>
`;

exports[`renders a FormattedDate with custom styles using Snapshots 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFF",
    }
  }
>
  01/01/2015 00:00
</Text>
`;
